--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -1245,3 +1245,16 @@ pages = {1--221},
 title = {{CASP13}},
 year = {2018}
 }
+@phdthesis{Mahato2016,
+abstract = {These days, virtual screening is applied in systematic drug design process which reduces cost and time for drug discovery. Virtual screening is soft computing technique being used for docking ligands from huge databases in selecting protein-receptor, targeting to correct drug. Due to non-linear nature of big-biological data, it is difficult to classify dockable and non-dockable ligands. Therefore, a machine learning method is used to train the classifier for separating intractable drug-target pair. However, the existing machine learning approaches have their several limitations on recent non-linear feature space of biological data. These days, deep learning approaches show advantages over many state-of-the art machine learning methods in complex applications. So, in this thesis, a new approach called PDTI-DBN framework was proposed to predict the interaction between drug and targets efficiently. The DBN (Deep Belief Network) is used to extract the high level features from 2D chemical substructure represented in fingerprint format. DBN, Stack of Restricted Boltzmann Machines is being trained by a greedy layer-wise unsupervised fashion and the result from this pre-training phase is used to initialize the parameters prior to Back-propagation (BP) used for fine tuning. The fine-tuning phase is composed by Multi Layer Perception (MLP) which shares all forward weights with RBMs. Similarly, logistic regression layer is staked as output layer. Then it is fine-tuned using BP of error derivative to build classification model that directly predict whether a drug interact with a target of interest. Based on evaluation with given dataset, it is shown that this DBN model improves the throughput by five folds with around 99{\%} accuracy for drug and target interaction prediction and its maximum F1-score obtained 73{\%} and average AUC value obtained as 0.88 from ROC curve},
+author = {Mahato, Om Prakash (Institute of Engineering/Pulchowk Campus)},
+file = {:Users/anupadkh/Library/Application Support/Mendeley Desktop/Downloaded/Mahato - 2016 - PDTI-DBN PREDICTING DRUG AND TARGET INTERACTION USING DEEP BELIEF NETWORK(2).pdf:pdf},
+keywords = {Deep Belief Network,Predicting drug-target interaction,Virtual Screening},
+mendeley-groups = {Protein Modeling/Drugs},
+mendeley-tags = {Deep Belief Network,Predicting drug-target interaction,Virtual Screening},
+pages = {2016},
+school = {Institute of Engineering, Tribhuwan University},
+title = {{PDTI-DBN: PREDICTING DRUG AND TARGET INTERACTION USING DEEP BELIEF NETWORK}},
+volume = {659},
+year = {2016}
+}
