--- a/mainmatter/2-Development/development.tex
+++ b/mainmatter/2-Development/development.tex
@@ -30,4 +30,6 @@ In the other hand chemical properties of drugs and the targets complicate the si
 
 The deep learning methods are quite good at predicting the molecular behaviour of the drug. However they present no good means when predicting the behaviour of proteins. This can be thought as protein-folding problem which when solved will help escalate the development of treatment facilites around the globe. The \acrfull{casp} experiments is such community which holds competition to determine and advance the state of art in modeling the protein sequence from amino acids.\cite{Gooch2011} To find the computational measure to predict the drug for a given protein, the major fallback is that the simple encoding techniques don’t incorporate the proteins behaviour related to hydrophobicity, acidity, secondary and tertiary structures information.\cite{Wong2018}
 
-No Free Lunch Theorem \cite{Wolpert2005} can be used for  on the other hand works by basing the prediction guesses based on a number of prediction functions. Here, we use the sequence information of proteins to calculate the predictions on different feature transformation techniques and generalize those predictions using a stack of dense layers.
+The problem formulation of protein-drug interaction categorizes the efficiency of protein-interaction prediction method. The methods based on binary classification has high accuracy, but has a big bias problem. This is because the unidentified interactions are also regarded as non-interactive pairs. \cite{Mahato2016,Tang2013}. The dataset is quite resourceful in case of classification problem. However, due to disadvantages of misclassification and same classification value for low-interactive and highly-interactive protein-drug pairs, regression problem is the better modificatiion of problem situation. \cite{Tang2013}
+
+No Free Lunch Theorem \cite{Wolpert2005} on the other hand works by basing the prediction guesses based on a number of domain representations. The domain representations of input data is solved using multiple functions to get the domain specific abilities of problem situation. Here, we use the sequence information of proteins to calculate the predictions on different feature transformation techniques and generalize those predictions using a stack of dense layers.
