--- a/mainmatter/3-Methodology/sections/pssm.tex
+++ b/mainmatter/3-Methodology/sections/pssm.tex
@@ -183,7 +183,7 @@ Table \ref{table:PSSM_Analysis} shows a conventional process of calculating PSSM
       S_{1,1} & S_{1,2} & \dots & S_{1,20} \\
       S_{2,1} & S_{2,2} & \dots & S_{2,20} \\
       \vdots  & \vdots  & \ddots & \vdots \\
-      S_{2,1} & S_{2,2} & \dots & S_{2,20} \\
+      S_{20,1} & S_{20,2} & \dots & S_{20,20} \\
     \end{bmatrix}
     \label{eq:rpt}
   \end{equation}
@@ -216,10 +216,7 @@ Table \ref{table:PSSM_Analysis} shows a conventional process of calculating PSSM
         A --> 1 & C --> 2 & B --> 3 & E --> 4 \\ \hline
         D --> 5 & G --> 6 & F --> 7 & I --> 8 \\ \hline
       \end{tabular}
-      }
-
-    \qquad
-    \subfloat[][Label Encodings for Drugs]{
+      } \quad \subfloat[][Label Encodings for Drugs]{
       \label{table:label_encoding:drugs}
       \centering
       % \caption{Drugs Labeled Encoding Technique}
