--- a/mainmatter/4-Results/results.tex
+++ b/mainmatter/4-Results/results.tex
@@ -274,7 +274,9 @@ The comparison between the scores evaluated in same dataset has been compared an
 
 Similarly, the prediction scores and actual scores for validation sets is shown in Figure ~\ref{fig:val_train}
 \begin{figure}[H]
-    \subfloat[Testing Actual Scores]{\includegraphics[width=.3\textwidth]{mainmatter/4-Results/images/val_y.png}}
+    \subfloat[Testing Actual Scores]{
+        \includegraphics[width=.3\textwidth]{mainmatter/4-Results/images/val_y.png}
+        }
     \subfloat[Testing Predicted Scores]{\includegraphics[width=.3\textwidth]{mainmatter/4-Results/images/pred_val_y.png}}
     \subfloat[Testing Scores Difference]{\includegraphics[width=.3\textwidth]{mainmatter/4-Results/images/val_difference.png}}
     \caption{Testing Results on KIBA score Prediction}
